[package]
name = "forward-blacklist"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.13.0"
teloxide-core = "0.10.1"
tokio = { version =  "1.43.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"